--- a/select.css
+++ b/select.css
@@ -434,8 +434,8 @@ ul {
   text-align: center;
   color: #adafb3;
 }
-.orangebox.slide.90slide {
+.slideShow {
+  width: calc((16 / 9) * 100vh);
   height: 100vh;
   margin-bottom: 0px;
-  width: calc((16 / 9) * 100vh);
 }
