--- a/select.css
+++ b/select.css
@@ -1,3 +1,6 @@
+@viewport {
+  zoom: 1;
+}
 @font-face {
   font-family: "NanumSquareRound";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/NanumSquareRound.woff")
