--- a/select.css
+++ b/select.css
@@ -454,6 +454,8 @@ ul {
     width: 339px;
     height: calc((100vh) - 230px);
     margin-bottom: 30px;
+    position: relative;
+    top: 0;
   }
   #slideContainer {
     width: 333px;
@@ -478,5 +480,28 @@ ul {
   #slideContainer {
     width: calc(((16 / 9) * 100vh) - 6px);
     height: calc(100vh - 6px);
+  }
+}
+@media screen and (orientation: landscape) and (min-width: 768px) {
+  .header,
+  .info,
+  .typeTab {
+    display: none;
+  }
+  body {
+    background-color: #c9c9c9;
+  }
+  .slide {
+    margin-bottom: 0px;
+    width: 100vw;
+    height: calc((9 / 16) * 100vw);
+    max-width: 100vw;
+    position: absolute;
+    top: calc((100vh - ((9 / 16) * 100vw)) / 2);
+    left: 0;
+  }
+  #slideContainer {
+    width: calc(100vw - 6px);
+    height: calc(((9 / 16) * 100vw) - 6px);
   }
 }
